--- a/tests/config/behat.yml
+++ b/tests/config/behat.yml
@@ -20,4 +20,6 @@ default:
       region_map:
         Primary tabs: 'ul.primary.tabs'
         Main menu: '#main-menu'
-
+      subcontexts:
+        paths:
+          - '%behat.paths.base%/../subcontexts'
