--- a/behat-tests/config/behat.local.yml.template
+++ b/behat-tests/config/behat.local.yml.template
@@ -16,5 +16,6 @@ default:
     Drupal\DrupalExtension\Extension:
       # Set this drush alias in your aliases.drushrc.php file to match
       # the base_url set above. Leave off the preceding '@'.
+      # Tag scenarios with @api if they use the drush driver.
       drush:
         alias: 'Input site alias here'
