--- a/resources/scrutinizer/.scrutinizer.yml
+++ b/resources/scrutinizer/.scrutinizer.yml
@@ -38,5 +38,12 @@ tools:
       - php
   js_hint: true
 before_commands:
+  # Remove core files - no need to analyse that.
+  - "rm -r includes misc modules scripts themes"
+  - "rm -r profiles/minimal profiles/standard profiles/testing"
+  # Also remove contrib modules and libraries under sites/all.
+  - "rm -r sites/all/modules/contrib sites/all/libraries"
+  # Also remove deployotron.
+  - "rm -r sites/all/drush/deployotron"
   # Remove generated code, we don't want to analyze that.
-  - "find . '(' -name '*.features.*' -or -name '*.feeds_importer_default.inc' -or -name '*.field_group.inc' -or -name '*.layouts.inc' -or -name '*.pages_default.inc' -or -name '*.panels_default.inc' -or -name '*.panelizer.inc' -or -name '*.strongarm.inc' -or -name '*.views_default.inc' ')' -print0 | xargs -0 rm"
+  - "find . '(' -name '*.features.*' -or -name '*.feeds_importer_default.inc' -or -name '*.field_group.inc' -or -name '*.layouts.inc' -or -name '*.pages_default.inc' -or -name '*.panels_default.inc' -or -name '*.panelizer.inc' -or -name '*.strongarm.inc' -or -name '*.views_default.inc' ')' -delete"
