--- a/resources/scrutinizer/.scrutinizer.yml
+++ b/resources/scrutinizer/.scrutinizer.yml
@@ -43,7 +43,9 @@ before_commands:
   - "rm -r profiles/minimal profiles/standard profiles/testing"
   # Also remove contrib modules and libraries under sites/all.
   - "rm -r sites/all/modules/contrib sites/all/libraries"
+  # Also remove stuff under private.
+  - "rm -r private"
   # Also remove deployotron.
   - "rm -r sites/all/drush/deployotron"
   # Remove generated code, we don't want to analyze that.
-  - "find . '(' -name '*.features.*' -or -name '*.feeds_importer_default.inc' -or -name '*.field_group.inc' -or -name '*.layouts.inc' -or -name '*.pages_default.inc' -or -name '*.panels_default.inc' -or -name '*.panelizer.inc' -or -name '*.strongarm.inc' -or -name '*.views_default.inc' ')' -delete"
+  - "find . '(' -name '*.features.*' -or -name '*.feeds_importer_default.inc' -or -name '*.field_group.inc' -or -name '*.layouts.inc' -or -name '*.pages_default.inc' -or -name '*.panels_default.inc' -or -name '*.panelizer.inc' -or -name '*.strongarm.inc' -or -name '*.views_default.inc' -or -name '*.ultimate_cron.inc' -or -name '*.rules_defaults.inc' -or -name '*.file_default_displays.inc' -or -name '*.linkit_profiles.inc' ')' -delete"
