--- a/resources/scrutinizer/.scrutinizer.yml
+++ b/resources/scrutinizer/.scrutinizer.yml
@@ -1,11 +1,12 @@
 tools:
   php_code_sniffer:
     extensions:
-      - module
       - inc
       - install
-      - test
+      - module
+      - php
       - profile
+      - test
       - theme
     config:
       standard: Drupal
@@ -50,5 +51,12 @@ before_commands:
   - "rm -r private"
   # Also remove deployotron.
   - "rm -r sites/all/drush/deployotron"
+  # Also remove composer installed files.
+  - "find . -name vendor -type d -exec rm -rf {} \;"
+  # Don't check settings files.
+  - "find sites -name '*settings.php' -delete"
+  - "rm sites/example.sites.php"
+  # Don't check template file.
+  - "find . -name '*.tpl.php' -delete"
   # Remove generated code, we don't want to analyze that.
   - "find . '(' -name '*.features.*' -or -name '*.feeds_importer_default.inc' -or -name '*.field_group.inc' -or -name '*.layouts.inc' -or -name '*.pages_default.inc' -or -name '*.panels_default.inc' -or -name '*.panelizer.inc' -or -name '*.strongarm.inc' -or -name '*.views_default.inc' -or -name '*.ultimate_cron.inc' -or -name '*.rules_defaults.inc' -or -name '*.file_default_displays.inc' -or -name '*.linkit_profiles.inc' ')' -delete"
