--- a/resources/scrutinizer/.scrutinizer.yml
+++ b/resources/scrutinizer/.scrutinizer.yml
@@ -44,7 +44,7 @@ build_failure_conditions:
   - 'issues.new.exists'
 before_commands:
   # Install an up-to-date eslint.
-  - 'cd /usr/share/scrutinizer && npm install eslint'
+  - 'npm install -g eslint'
   # Remove core files - no need to analyse that.
   - "rm -r includes misc modules scripts themes"
   - "rm -r profiles/minimal profiles/standard profiles/testing"
